force-app/main/default/objects/TypeForm_Settings__mdt/TypeForm_Settings__mdt.object-meta.xml
<CustomObject>
    <label>TypeForm Settings</label>
    <pluralLabel>TypeForm Settings</pluralLabel>
</CustomObject>