force-app/main/default/objects/TypeForm_Settings__mdt/fields/Default_account_name__c.field-meta.xml
<CustomField>
    <fullName>Default_account_name__c</fullName>
    <label>Default account name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>