force-app/main/default/objects/TypeForm_Settings__mdt/fields/Page_size__c.field-meta.xml
<CustomField>
    <fullName>Page_size__c</fullName>
    <label>Page size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>