force-app/main/default/objects/TypeForm_Settings__mdt/fields/Personal_token__c.field-meta.xml
<CustomField>
    <fullName>Personal_token__c</fullName>
    <label>Personal token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>